* added more tests
* added module for generating '.sg2' files from 2d Tribon XML output.


git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@5 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -26,11 +26,9 @@ TESTS += rasterfile_test
 TESTS += material_test
 TESTS += tx2glshipmodel_test
 TESTS += proftable_test
-TESTS += rasterfile_dtest
-TESTS += material_dtest
-TESTS += tx2glshipmodel_dtest
-TESTS += proftable_dtest
-TESTS += default_dtest
+TESTS += coorsys_test
+TESTS += tx2glshipmodel_app_test
+TESTS += tx2dfile_app_test
 
 PY = $(shell /bin/find ../src -name \*.py)
 SRC = $(shell /bin/find ../src -name \*.c)
@@ -43,10 +41,16 @@ test:	build $(TESTS)
 build:
 	cd .. ; make build
 
-default_test:	../data/TribonXML_3D/basic_ideal.xml	\
+tx2glshipmodel_app_test:	../data/TribonXML_3D/basic_ideal.xml	\
 		$(PY)	../app/tx2glshipmodel
 	$(MAKE) build
-	$(PYTHON) ../app/tx2glshipmodel
+	$(PYTHON) ../app/tx2glshipmodel $<
+	touch $@
+
+tx2dfile_app_test:	../data/ToPATRAN/general_information.xml	\
+		$(PY)	../app/tx2dfile
+	$(MAKE) build
+	$(PYTHON) ../app/tx2dfile $<
 	touch $@
 
 %_test:	%_test.py	$(PY)
