Tests are passing after restructuring of module.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@13 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -117,7 +117,7 @@ vpath ../data/DA2100
 
 #vpath %.xml $(AKER_DIR)
 
-# Local Variables: ***
-# compile-command:"make test" ***
-# coding:utf-8 ***
-# End: ***
+# Local Variables:
+# compile-command:"make test"
+# coding:utf-8
+# End:
