Generating Plates for Pegasus is working now.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@19 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,7 +1,6 @@
 # Copyright (C) 2007 by Germanischer Lloyd AG
 
 # ======================================================================
-# Module    Makefile
 # Task      Generate documentation for Tribon XML tools.
 # ----------------------------------------------------------------------
 # Author    Berthold Höllmann <hoel@GL-Group.com>
@@ -12,14 +11,16 @@
 
 SHELL = /bin/sh
 
+DOC_HOST=www-intern
+DOC_DIR=/export/WWW-Intern/htdocs/pool/ho/software/info/tribonXML_convert
+
 all test:
-	@echo "Nothing to be done for $@"
 
 doc:
 	[ -d tribon_doc ] || mkdir tribon_doc
 	PYTHONPATH=../src python -c "from epydoc.cli import cli ; cli()" --config tribon.ini -v --inheritance included
 	chmod -R a+r tribon_doc
-	#scp -r tribon_doc/* www-intern:/export/WWW-Intern/htdocs/pool/ho/software/info/temp/tribon
+	scp -r tribon_doc/* $(DOC_HOST):$(DOC_DIR)
 
 
 # Local Variables:
