Enhance handling of unsupported beam cross sections.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@23 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -25,7 +25,7 @@ TESTS = $(UTESTS)
 TESTS += write_pegasusxml_rtest
 TESTS += DA2100_test
 TESTS += DA2100_ANSYS_test
-TESTS += Horn_20071006_test
+TESTS += Horn_20071106_test
 
 BIG_TESTS += tx2glshipmodel_app_test
 BIG_TESTS += tx2dfile_app_test
@@ -79,12 +79,12 @@ SMK_SEC12_GLM += SMK_sec12/lm012.glm
 SMK_SEC12_MAC  = SMK_sec12/lm012-idealisation.mac
 SMK_SEC12_MAC += SMK_sec12/lm012.mac
 
-HORN_20071006_MAC += Horn_20071006/li027-28-29.mac
-HORN_20071006_MAC += Horn_20071006/li027.mac
-HORN_20071006_MAC += Horn_20071006/li028.mac
-HORN_20071006_MAC += Horn_20071006/li029.mac
-HORN_20071006_MAC += Horn_20071006/li042.mac
-HORN_20071006_MAC += Horn_20071006/li043.mac
+HORN_20071106_MAC += Horn_20071106/li027-28-29.mac
+HORN_20071106_MAC += Horn_20071106/li027.mac
+HORN_20071106_MAC += Horn_20071106/li028.mac
+HORN_20071106_MAC += Horn_20071106/li029.mac
+HORN_20071106_MAC += Horn_20071106/li042.mac
+HORN_20071106_MAC += Horn_20071106/li043.mac
 
 li027-28-29_mac_addargs = 
 li027_mac_addargs = --min-k=2200
@@ -93,12 +93,12 @@ li029_mac_addargs = --min-k=3700
 li042_mac_addargs = --min-k=4500
 li043_mac_addargs = --min-k=4900
 
-HORN_20071006_GLM += Horn_20071006/li027-28-29.glm
-HORN_20071006_GLM += Horn_20071006/li027.glm
-HORN_20071006_GLM += Horn_20071006/li028.glm
-HORN_20071006_GLM += Horn_20071006/li029.glm
-HORN_20071006_GLM += Horn_20071006/li042.glm
-HORN_20071006_GLM += Horn_20071006/li043.glm
+HORN_20071106_GLM += Horn_20071106/li027-28-29.glm
+HORN_20071106_GLM += Horn_20071106/li027.glm
+HORN_20071106_GLM += Horn_20071106/li028.glm
+HORN_20071106_GLM += Horn_20071106/li029.glm
+HORN_20071106_GLM += Horn_20071106/li042.glm
+HORN_20071106_GLM += Horn_20071106/li043.glm
 
 all:
 	@true
@@ -206,16 +206,19 @@ DA2100_ANSYS_test:	$(PY)			\
 		--output=da2100.mac
 	touch $@
 
-Horn_20071006/%.mac:	%.xml	$(PY)
+Horn_20071106/%.mac:	%.xml	$(PY)
 	@[ -d ${@D} ] || mkdir ${@D}
 	$(PYTHON) ../app/tx2ansys $< --output $@ $($*_mac_addargs)
 
-Horn_20071006/%.glm:	%.xml $(PY)
+Horn_20071106/%.glm:	%.xml $(PY)
 	@[ -d ${@D} ] || mkdir ${@D}
 	$(PYTHON) ../app/tx2glshipmodel --validate $< $@
 
+%.glm:	%.xml $(PY)
+	@[ -d ${@D} ] || mkdir ${@D}
+	$(PYTHON) ../app/tx2glshipmodel --validate $< $@
 
-Horn_20071006_test:	$(PY)	$(HORN_20071006_MAC)	$(HORN_20071006_GLM)
+Horn_20071106_test:	$(PY)	$(HORN_20071106_MAC)	$(HORN_20071106_GLM)
 	touch $@
 
 clean:
@@ -225,11 +228,12 @@ clean:
 
 vpath %.py $(shell $(FINDDIR)find ../src -type d|grep -v .svn)
 vpath %.xml ../data/DA2100
-vpath %.xml ../data/Horn_20071006/
+vpath %.xml ../data/Horn_20071106
 vpath %.xml ../data/TribonXML_3D
 vpath %.xml ../data/SMK_sec12
 vpath %.xml $(AKER_DIR)/
 vpath %.xml $(AKER_DIR)/3D/
+vpath %.xml ../data/SMK
 
 # Local Variables:
 # compile-command:"make test"
