fixed some file properties
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@30 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -107,6 +107,6 @@ linkcheck:
 	      "or in _build/linkcheck/output.txt."
 
 # Local Variables:
-# compile-command:"make"
+# compile-command:"make html"
 # coding:utf-8
 # End:
