Continuing refactoring of Tribon XML reading classes.
Status: nonworking


git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@43 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -104,7 +104,7 @@ TRIBON_20080516 += Tribon-20080516/ED1_3D_2.hcf
 all:
 	@true
 
-test:	py_dep build $(TESTS)	$(DA2100)	$(PEGASUS_TEST)	$(HORN_20071106_MAC)
+test:	py_dep build	$(PEGASUS_TEST)	$(TESTS)	$(DA2100)	$(HORN_20071106_MAC)
 
 test_all:	test	$(BIG_TESTS)
 
