Continued refactoring of Pegasus XML writing classes.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@46 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -22,6 +22,7 @@ PYTHON = PYTHONPATH=$(BPATH) python #-v
 PYBASE = ../src
 UTESTS = $(subst /,.,$(subst $(PYBASE)/,,$(patsubst %.py,%_test,$(PY))))
 TESTS = $(UTESTS)
+TESTS += $(PEGASUS_TEST)
 TESTS += write_pegasusxml_rtest
 TESTS += DA2100_test
 TESTS += DA2100_ANSYS_test
